Prod V2/main/default/objects/Contact/fields/Active_Contact__c.field-meta.xml
<CustomField>
    <fullName>Active_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Contact</label>
    <type>Checkbox</type>
</CustomField>