Prod V2/main/default/objects/Contact/fields/Attended_Makeup_Training__c.field-meta.xml
<CustomField>
    <fullName>Attended_Makeup_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Makeup Training</label>
    <type>Checkbox</type>
</CustomField>