Prod V2/main/default/objects/Contact/fields/Attended_Rigorgeous_Days__c.field-meta.xml
<CustomField>
    <fullName>Attended_Rigorgeous_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Rigorgeous Days</label>
    <type>Checkbox</type>
</CustomField>