Prod V2/main/default/objects/Contact/fields/Decision_Making_Authority__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making_Authority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Making Authority</label>
    <type>Checkbox</type>
</CustomField>