Prod V2/main/default/objects/Contact/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>fr_BE</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>nl_BE</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>