Prod V2/main/default/objects/Contact/fields/Sent_To_Odoo__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Odoo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent To Odoo</label>
    <type>Checkbox</type>
</CustomField>